Build and run info in README